# FDTDMEX

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/fdtdmex/: SKILL.md
.claude/skills/fdtdx/: SKILL.md
.claude/skills/physics-validation/: SKILL.md
.claude/skills/porting-from-fdtdx/: SKILL.md
agentic_adapter/: real_solver.py
benchmarks/: README.md  bench_forward.py  m1_kernel.py  microbench_fusion.py  plot_results.py  profile_engine.py  profile_memory.py  profile_metal.py
dev-docs/: ACTION_PLAN.md  UPSTREAM_CONTRIB.md  UPSTREAM_SYNC.md  performance-roadmap.md  porting.md  roadmap.md
dev-docs/decisions/: 0001-mlx-forward-first.md
docs/: agent-f-mcp-brief.md  agent-f-progress-task.md  agent-f-tasks.md  architecture.md  getting-started.md  index.md  licensing.md  materials-anisotropy.md  mcp-and-ui.md  metal-bottleneck-analysis.md  mode-solver.md  nonuniform-grid.md  perf-baseline.md  perf-eval-plan.md  performance.md  phase2-metal-kernels.md  physics.md  porting-notes.md  roadmap.md  sidequest-ring-validation.md  subpixel-smoothing.md  widening-mlx-port-plan.md
docs/decisions/: 0001-mlx-forward-first.md
examples/: README.md  make_showcase_images.py  quickstart_notebook.py  ring_resonator_demo.py
examples/bloch_band_structure/: bloch_band_structure.py
examples/quickstart_notebook/: quickstart_notebook.py
examples/ring_mrm_oband/: README.md  field_maps_100nm.py  ring_mrm_oband.ipynb  ring_mrm_oband.py
examples/ring_resonator_agentic/: README.md  ring_resonator_agentic.py
examples/ring_resonator_demo/: make_showcase_images.py  ring_resonator_demo.py
reference/: README.md
server/: .mcp.json  README.md  install.sh
server/fdtdmex_mcp/: __init__.py  __main__.py  corpus.py  server.py
src/fdtdmex/: __init__.py  _version.py
src/fdtdmex/backend/: __init__.py
src/fdtdmex/core/: __init__.py
src/fdtdmex/detectors/: __init__.py
src/fdtdmex/fdtd/: __init__.py
src/fdtdmex/geometry/: __init__.py
src/fdtdmex/io/: __init__.py  _hdf5.py  _runner.py  launch.py  mock.py  pack.py  postproc.py  run.py  schema.py  status.py
src/fdtdmex/materials/: __init__.py
src/fdtdmex/materials/smoothing/: __init__.py
src/fdtdmex/modes/: __init__.py
src/fdtdmex/sources/: __init__.py
src/fdtdmex/viz/: __init__.py
src/fdtdx/: __init__.py  scene.py
src/fdtdx/backend/: __init__.py  context.py  dispatch.py  platform.py
src/fdtdx/conversion/: json.py
src/fdtdx/core/physics/: modes.py  subpixel.py
src/fdtdx/core/physics/mode_backend/: __init__.py  operator.py  solve.py
src/fdtdx/fdtd/: wrapper.py
src/fdtdx/mlx/: __init__.py  accumulate.py  aniso.py  boundary_mask.py  bridge.py  curl.py  detector_freeze.py  inject.py  interpolate.py  kernels.py  loop.py  metrics.py  pml.py  serialize.py  source_freeze.py  state.py  update.py
src/fdtdx/utils/: mode_expansion.py  plot_modes.py  plot_setup_3d.py  smatrix.py
tests/: README.md  conftest.py
tests/unit/: test_smoke.py
tests/unit/core/physics/: test_modes.py
tests/unit/fdtd/: test_wrapper.py
tests/unit/utils/: test_smatrix.py
tests/validation/: conftest.py  test_io_roundtrip.py  test_mlx_dft_subsample.py  test_mlx_dispersion.py  test_mlx_kernel.py  test_mlx_lossy_aniso.py  test_mlx_nonuniform.py  test_mlx_parity.py  test_mlx_pec_pmc.py  test_mlx_region_interp.py  test_mode_expansion.py  test_mode_solver.py  test_subpixel.py
tests/visualization/: test_birefringence_visual.py  test_nonuniform_convergence_visual.py
web/: README.md
