[project]
name = "fdtdmex"
version = "0.0.1.dev0"
description = "Forward-first, Metal-native FDTD electromagnetics on Apple Silicon (MLX), with full-tensor anisotropic materials and subpixel smoothing."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Jinge Wang", email = "jinge@berkeley.edu" }]
keywords = ["FDTD", "electromagnetics", "photonics", "MLX", "Metal", "Apple Silicon", "anisotropic", "Maxwell"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core runtime: the MLX engine + host-side numerics & geometry.
dependencies = [
    "mlx>=0.18",        # Apple's array framework (Metal backend + unified memory)
    "numpy>=1.26",      # host-side arrays / interop with MLX
    "scipy>=1.11",      # sparse eigensolve for the mode solver, FFTs, etc.
    "gdstk>=0.9",       # GDS import (geometry)
    "trimesh>=4.5",     # STL / mesh geometry I/O
    "pydantic>=2.7",    # declarative config schema (Tidy3D-like front end)
    "h5py>=3.10",       # HDF5 for large field results
    "rich>=13.9",       # console output / progress
    "loguru>=0.7",      # logging
]

[project.optional-dependencies]
# 3D / web visualization (kept optional so the core stays lean).
viz = ["matplotlib>=3.9", "plotly>=5.22", "pyvista>=0.44", "trame>=3.6"]
# MCP server for LLM orchestration (WS-D).
mcp = ["mcp>=1.0"]
# Cross-check oracle: run the same case through FDTDX (JAX) on CPU for validation.
validation = ["jax>=0.4.36"]
# Developer tooling.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "pre-commit>=3.7"]

[project.urls]
Repository = "https://github.com/Jinge-Wang/FDTDMEX"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdtdmex"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = ["reference", "docs", "web"]

[tool.ruff.lint]
# import sorting + common correctness lints
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated component tests (no simulation runs)",
    "integration: object placement / multi-component interaction",
    "validation: full forward runs validated against analytic or FDTDX/MEEP references",
]
