[project]
name = "fdtdx"
version = "0.6.2"
description = "A JAX framework for the finite-difference time-domain (FDTD) method for solving Maxwell's equations with a focus on inverse design of photonic devices, plus a forward-first MLX (Metal) backend for Apple Silicon."
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
    { name = "Frederik Schubert", email = "schubert@tnt.uni-hannover.de" },
    { name = "Jinge Wang", email = "jinge@berkeley.edu" },
]
requires-python = ">=3.11, <3.15"
dependencies = [
    "loguru>=0.7.3",
    "pytreeclass>=0.11",
    "jax>=0.4.36",
    "moviepy@git+https://github.com/Zulko/moviepy@7ffa4f00376237137a25fe1c777355c37753e9af",
    "optax>=0.2.4",
    "equinox>=0.11.10",
    "trimesh>=4.5.3",
    "scipy>=1.11",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "rich>=13.9.4",
    "typing-extensions>=4.14.1",
    "gdstk>=0.9",
    # MLX (Metal) forward backend — Apple Silicon only. The dispatch layer guards
    # every use with mlx_available(), so non-Darwin/non-arm64 installs simply run JAX.
    "mlx>=0.18; platform_system=='Darwin' and platform_machine=='arm64'",
]

[project.optional-dependencies]
# Tidy3D mode solver — now an optional, legacy backend. The native full-vectorial FD solver
# (mode_backend="fdtdmex", default) removes the hard dependency; install this only to use
# mode_backend="tidy3d" for fully tensorial media, bends, or dev-time cross-checks.
tidy3d = ["tidy3d>=2.8.0"]
# Config schema + HDF5 sim_init/sim_run/sim_postproc IO layer (the agentic hand-off seam).
io = ["h5py>=3.10", "pydantic>=2.6"]
# 3D / web visualization (WS-D), kept optional so the core stays lean.
viz = ["plotly>=5.22", "pyvista>=0.44", "trame>=3.6"]
# MCP server for LLM orchestration (WS-D). Builds on the io + viz layers.
mcp = ["mcp>=1.0", "h5py>=3.10", "pydantic>=2.6", "plotly>=5.22"]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "tox-uv>=1.16.1",
    "pydoclint>=0.6.6",
    "sphinx<9.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst_nb>=1.3.0",
    "sphinx-copybutton>=0.5.2",
    "chex>=0.1.91",
    "sphinx-design",
    "ty>=0.0.49",
    # Legacy Tidy3D mode backend, kept in dev for the native-solver cross-check tests.
    "tidy3d>=2.8.0",
]

[project.scripts]
# MCP discovery server (stdio). Ships as the second wheel package below so
# `import fdtdmex_mcp` works without a path hack.
fdtdmex-mcp = "fdtdmex_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/Jinge-Wang/FDTDMEX"
Upstream = "https://github.com/ymahlau/fdtdx"
Documentation = "https://fdtdx.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/fdtdx is the engine (incl. the MLX backend under src/fdtdx/{backend,mlx});
# src/fdtdmex is a thin brand alias re-exporting fdtdx; server/fdtdmex_mcp is the MCP
# discovery server, shipped as a second top-level package (fdtdmex_mcp).
packages = ["src/fdtdx", "src/fdtdmex", "server/fdtdmex_mcp"]

[tool.hatch.build.targets.wheel.sources]
"server/fdtdmex_mcp" = "fdtdmex_mcp"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = ["examples", "slurm", "checks", "docs", "reference", "web", "benchmarks"]

[tool.ruff.lint]
extend-select = ["I", "RUF"]
ignore = []
allowed-confusables = ["α", "β", "γ", "δ", "ε", "ζ", "η", "θ", "ι", "κ", "λ", "μ", "ν", "ξ", "π", "ρ", "σ", "τ", "υ", "φ", "χ", "ψ", "ω", "Α", "Β", "Γ", "Δ", "Ε", "Ζ", "Η", "Θ", "Ι", "Κ", "Λ", "Μ", "Ν", "Ξ", "Π", "Ρ", "Σ", "Τ", "Υ", "Φ", "Χ", "Ψ", "Ω"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "docs: marks tests as docs tests (deselect with '-m \"not docs\"')",
    "simulation: marks tests as simulation tests",
    "validation: full forward runs validated against analytic or FDTDX(JAX-CPU)/MEEP references",
]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]

[tool.ty.src]
exclude = ["tests"]

[tool.ty.environment]
python-version = "3.14"
